@@ -52,6 +52,8 @@ x added: `DIFFARR(prop, arr_A, arr_B)` is a global alias for `U.diffarr()`
 x added: `global.REQUIRE()` for local modules within app directory
 x added: `global.isWORKER` variable which contains `true` (when the process is executed as a worker) or `false`
 x added: `ACTION(url, [data], callback)` can evaluate a route without request creation
+- added: `ROUTE('++ METHOD URL')`, it means that `++` or `+` adds `authorized` flag
+- added: `ROUTE('-- METHOD URL')`, it means that `--` or `-` adds `unauthorized` flag
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
